# eralands-notifications

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 1913d3382af2_add_clients.py  433bbf784555_add_notification_channels.py  4d966a48a65f_add_leads.py  8ed0d307bb9c_add_landings.py  9a8b47f70757_add_linking_codes.py  ba119a9427e2_add_deliveries.py  d43772e0bfa8_add_landing_routes.py
app/: main.py
app/api/: __init__.py  bot.py  clients.py  deps.py  health.py  landings.py  leads.py  router.py
app/bot/: __init__.py  texts.toml
app/bot/abstracts/: __init__.py  commands.py  replies.py
app/bot/core/: __init__.py  bot.py
app/bot/handlers/: __init__.py  echo.py
app/bot/middleware/: __init__.py  db.py  logging.py
app/bot/schemas/: __init__.py  webhook.py
app/bot/services/: __init__.py
app/bot/utils/: __init__.py  commands.py  replies.py  setup.py
app/core/: __init__.py  config.py  errors.py  get_app.py  logging.py  security.py  session.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  base.py  client.py  delivery.py  landing.py  landing_route.py  lead.py  linking_code.py  notification_channel.py
app/schemas/: __init__.py  client.py  error.py  health.py  landing.py  lead.py  linking_code.py  notification_channel.py
app/services/: __init__.py
app/utils/: __init__.py  lifespan.py  tokens.py
scripts/admin/: __init__.py  __main__.py  api.py  cli.py  config.py  ui.py
scripts/deploy/: __main__.py
tests/: conftest.py
tests/pipelines/: test_client_offboarding.py  test_client_onboarding.py  test_delivery_partial_failure.py  test_employee_added.py  test_landing_disabled.py  test_linking_errors.py  test_route_unlinked.py
(+24 files in other folders)
