[tool.poetry]
name = "eralands-notifications"
version = "0.1.0"
description = "Eralands Notifications — REST API backend for landing form submissions"
authors = ["Erik Rusanov <erik.rusanov.03@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic-settings = "^2.7.0"
aiogram = "^3.13.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.15"
uuid-utils = "^0.14.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
pre-commit = "^4.6.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# log_cli включён всегда, но молчит на WARNING. Флаг --logs (см. conftest)
# опускает уровень до INFO и зажигает шаги пайплайна.
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(message)s"
